fix spacing thing

--- a/src/app/seats/seats.component.scss
+++ b/src/app/seats/seats.component.scss
@@ -121,13 +121,11 @@ $seat-unavailable-color: red;
 }
 
 #show-image {
-  max-height: 60px;
-  max-width: 100px;
+  max-width: 150px;
   float: left;
   margin-right: 10px;
 }
 
 #selection-summary {
   text-align: left;
-  vertical-align: middle;
 }
